resources/public/api/conf/1.0/docs/errors.md
Here is the list error codes that we will keep updating.
We use standard HTTP status codes to show whether an API request has succeeded or not: 
**POST:**

Returned to user:

202 Accepted: if operation succeeds.

400 BadRequest: if XML message is invalid.

401 Unauthorized: if client passes invalid auth credentials.

403 Forbidden: If supplied auth token doesn't contain valid enrolment.

404 Not Found: if no object with specified id found in database.

415 Unsupported Media Type: If the client specified an invalid "Content-Type" header

500 Internal Server Error: if exception in code occurs.

501 Not Implemented: If user attempts to POST a message and the message type isn't currently supported.

**PUT**

Returned to user:

202 Accepted: if operation succeeds.

400 BadRequest: if XML message is invalid.

401 Unauthorized: if client passes invalid auth credentials.

403 Forbidden: If supplied auth token doesn't contain valid enrolment.

404 Not Found: if no object with specified id found in database.

415 Unsupported Media Type: If the client specified an invalid "Content-Type" header

500 Internal Server Error: if exception in code occurs.

**GET**

Returned to user:

200 OK: if operation succeeds.

401 Unauthorized: if client passes invalid auth credentials.

403 Forbidden: If supplied auth token doesn't contain valid enrolment.

404 Not Found: if no object with specified id found in database.

415 Unsupported Media Type: if "Accept" header contains invalid type.

500 Internal Server Error: if exception in code occurs.

505 HttpVersionNotSupported: if client passes in an Accept header which contains the wrong version number.

Errors specific to each API are shown in the Endpoints section, under Response. 
See our [reference guide](/api-documentation/docs/reference-guide#errors) for more on errors.

